--- a/realdriver/Makefile
+++ b/realdriver/Makefile
@@ -6,8 +6,9 @@ obj-m := realdriver.o
 
 default:
 	$(MAKE) -C $(KERNELDIR) M=$(PWD) modules
+	gcc user.c -o user
 install:
 	$(MAKE) -C $(KERNELDIR) M=$(PWD) modules_install
 clean:
 	$(MAKE) -C $(KERNELDIR) M=$(PWD) clean
-
+	rm -rf user 
